2008-09-27  Eli Zaretskii  <eliz@gnu.org>

	* composite.c (Fcomposition_get_gstring)
	(Fcompose_region_internal, Fcompose_string_internal)
	(Ffind_composition_internal): Doc fix.
	(syms_of_composite) <compose-chars-after-function>: Doc fix.
	(syms_of_composite) <auto-composition-function>: Doc fix.
	(syms_of_composite) <composition-function-table>: Doc fix.

2008-09-25  Chong Yidong  <cyd@stupidchicken.com>

	* search.c (wordify): New argument for lax word-ends.
	(Fword_search_forward_lax, Fword_search_backward_lax): New funs.

2008-09-24  Dan Nicolaescu  <dann@ics.uci.edu>

	* lisp.h (is_daemon): Declare.
	* dispnew.c (init_display): Do not try to initialize the terminal
	when running as a daemon.

2008-09-22  Chong Yidong  <cyd@stupidchicken.com>

	* nsfns.m (compute_tip_xy): Use x_display_pixel_width and
	x_display_pixel_height.

2008-09-22  Martin Rudalics  <rudalics@gmx.at>

	* undo.c (record_point): Don't call Fundo_boundary for first
	change.  (Bug#731)

2008-09-22  Juanma Barranquero  <lekktu@gmail.com>

	* emacs.c (Fdaemonp): Doc fix.

2008-09-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs.c (main): Place #ifdef in the proper place.

2008-09-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* emacs.c (standard_args): Add --daemon.
	(main): Disconnect from the terminal when --daemon is passed.
	(is_daemon): New variable.
	(Fdaemonp): New function.
	(syms_of_emacs): Defsubr it.

2008-09-20  Chong Yidong  <cyd@stupidchicken.com>

	* xdisp.c (get_next_display_element): Handle string display
	correctly when checking for the end of a box run.

2008-09-20  Glenn Morris  <rgm@gnu.org>

	* fileio.c (Qdelete_by_moving_to_trash): New Lisp_Object.
	(syms_of_fileio): Add Qdelete_by_moving_to_trash.
	(Frename_file): Avoid copying to trash if a rename involves
	a delete.  (Bug#964).

2008-09-20  Eli Zaretskii  <eliz@gnu.org>

	* keyboard.c (Fset_quit_char, Fset_input_meta_mode)
	(Fset_output_flow_control, Fcurrent_input_mode): Support MSDOS
	frames as well as termcap frames.